@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-16T01:16:01Z",
+  "timestamp" : "2022-05-16T08:26:22Z",
   "count_outdated" : 216,
   "uniques_outdated" : 141,
-  "count" : 269,
-  "uniques" : 174,
+  "count" : 270,
+  "uniques" : 175,
   "clones" : [
     {
       "timestamp": "2022-05-02T00:00:00Z",
@@ -95,6 +95,13 @@
       "count_minmax": [ 0, 2 ],
       "uniques": 2,
       "uniques_minmax": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2022-05-16T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 0, 1 ]
     }
   ]
 }
