@@ -1,5 +1,5 @@
 {
-  "count": 53,
+  "count": 54,
   "uniques": 15,
   "clones": [
     {
@@ -66,6 +66,11 @@
       "timestamp": "2022-05-15T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-05-16T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
