@@ -1,3 +1,10 @@
+2022-05-16T08:26:22Z:
+* notice: last 14d: all unq: 54 15
+* notice: prev accum: outdated-all outdated-unq / all unq: 216 141 / 269 174
+* notice: next accum: outdated-all outdated-unq / all unq: 216 141 / 270 175
+* notice: prev json diff / prev day diff: unq all: +1 +1 -0 -0 / +2 +2 -0 -0
+* notice: changed dates: [2022-05-16]
+
 2022-05-16T01:16:01Z:
 * notice: last 14d: all unq: 53 15
 * notice: prev accum: outdated-all outdated-unq / all unq: 216 141 / 268 173
